# irdashies

./: .gitignore  .lintstagedrc.js  .npmrc  .prettierignore  .prettierrc  AGENTS.md  BROWSER_CONFIG_SYNC.md  CLAUDE.md  COMMITS_SUMMARY.md  COMPONENT_SERVER.md  COMPONENT_URI_FEATURE.md  GIT_COMMIT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  TROUBLESHOOTING_COMPONENTS.md  USE_DASHBOARD_HOOK.md  binding.gyp  claude.md  component-debug.html  eslint.config.mjs  forge.config.ts  index-component-renderer.html  index-dashboard-view.html  index-hid-host.html  index.html  package-lock.json  package.json  platform.ts  tsconfig.json  vite.component-renderer.config.ts  vite.config.browser.ts  vite.config.electron.ts  vite.main.config.ts  vite.paths.ts  vite.renderer.config.ts  vitest.config.ts  vr-openxr-design.md  vr-website-rendering.md
.claude/: settings.local.json
.github/: pull_request_template.md
.husky/: pre-commit
.storybook/: borderRadiusDecorator.tsx  index.ts  main.ts  mockDashboardBridge.ts  preview.tsx  raceControlDecorator.tsx  telemetryDecorator.tsx
docs/: ARCHITECTURE_REVIEW.md  ARCHITECTURE_RULES.md  IMPLEMENTATION_PLAN.md  PERFORMANCE_TEST_LOG.md  PERFORMANCE_TEST_SUMMARY.md  SIGNPATH.md  SPLIT_TACHOMETER_SHIFT_LIGHTS_PLAN.md  workflow.md
native/: build.ps1
native/openxr-layer/: CMakeLists.txt  README.md  irDashies-OpenXR.json.in
native/openxr-layer/scripts/: register.ps1  restore-layers.ps1  unregister.ps1
native/openxr-layer/src/: layer.cpp
native/shm-test-producer/: CMakeLists.txt  README.md
native/shm-test-producer/src/: probe.cpp  producer.cpp
site/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
site/public/: CNAME
src/: component-renderer-entry.ts  dashboard-view-entry.tsx  hidHost.ts  interface.d.ts  main.ts  preload.ts  renderer.ts
test-data/: fuel_data.json
tools/: analyze-memory.ts  analyze-profile.ts  analyze-tracks.ts  auth.ts  download-track-svgs.ts  fetch-car-data.ts  fetch-lovely-data.ts  fetch-lovely-track-data.ts  generate-paths-json.ts  generate-series-mapping.ts  generate-track-json.ts  generateMockFuelData.ts  get-cars.ts  get-flairs.ts  get-series.ts  get-tracks-info.ts  get-tracks.ts  index.ts  login.ts  svg-utils.ts
(+937 files in other folders)
